# annil-serverless

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml  docker.yml
src/: lib.rs  main.rs
