[package]
name = "annil-serverless"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anni-provider = { git = "https://github.com/ProjectAnni/anni.git", package = "anni-provider", default-features = false }
anni-provider-od = { git = "https://github.com/snylonue/anni-provider-od" }
annil = { git = "https://github.com/ProjectAnni/anni.git", package = "annil", default-features = false }
jwt-simple = "0.11"
uuid = { version = "1", features = ["serde"]}
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}
tokio-util = { version = "0.6.10", features = ["compat", "io"] }
tower-http = { version = "0.3", features = ["cors"]}
tower = "0.4"
serde_json = "1.0.89"

[patch.crates-io]
rusqlite = { git = "https://github.com/ProjectAnni/rusqlite", branch = "wasm32-unknown-unknown" }
