[package]
name = "annil_serverless"
version = "0.5.1"
edition = "2021"
publish = false

[dependencies]
shuttle-axum = "0.21"
shuttle-runtime = "0.21"
shuttle-persist = "0.21"
shuttle-secrets = "0.21"
axum = { version = "0.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anni-provider = { git = "https://github.com/ProjectAnni/anni", package = "anni-provider", default-features = false }
anni-provider-od = { git = "https://github.com/snylonue/anni-provider-od", rev = "38e593f" }
annil = { git = "https://github.com/ProjectAnni/anni.git", package = "annil", default-features = false }
jwt-simple = "0.11"
uuid = { version = "1", features = ["serde"]}
tokio = "1"
tokio-util = { version = "0.6.10", features = ["compat", "io"] }
tower-http = { version = "0.3", features = ["cors"]}
tower = "0.4"
anyhow = "1.0.66"
serde_json = "1.0.89"
log = "0.4"

[patch.crates-io]
rusqlite = { git = "https://github.com/ProjectAnni/rusqlite", branch = "wasm32-unknown-unknown" }

[patch.'https://github.com/ProjectAnni/anni']
anni-provider = { git = "https://github.com/snylonue/anni", package = "anni-provider", branch = "reduce-unstable" }
anni-flac = { git = "https://github.com/snylonue/anni", package = "anni-flac", branch = "reduce-unstable" }
annil = { git = "https://github.com/snylonue/anni", package = "annil", branch = "reduce-unstable" }